--- a/scss/main.scss
+++ b/scss/main.scss
@@ -36,6 +36,11 @@
 @import 'components/services/image_services';
 
 
+//*Components cobertura
+@import 'components/cobertura/hero_cobertura';
+@import 'components/cobertura/contact_cobertura';
+@import 'components/cobertura/location';
+
 
 *{
 	margin: 0;
