--- a/scss/globals/_colors.scss
+++ b/scss/globals/_colors.scss
@@ -6,6 +6,8 @@ $heavy_metal:#2F2E2E;
 $mikado_yellow:#FFCB00;
 $saffron_mango:#E1CB5E;
 $candlelight:#FFDA1F;
+$naples_yellow:#FBDB5B;
+$light_tan:#FBEBA3;
 
 $storm_dust:#5E5E5E;
 $carbon_grey:#605E5E;
