--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -112,9 +112,10 @@
 				text-decoration: underline;
 				
 				&__icon{
+					width: 16px;
+					
 					svg{
 						width: 100%;
-						height: 100%;
 					}
 				}
 			}
