--- a/css/main.css
+++ b/css/main.css
@@ -132,9 +132,10 @@
         color: #FFFFFF;
         font-size: 18px;
         text-decoration: underline; }
-        .header__mobile__contact__item__icon svg {
-          width: 100%;
-          height: 100%; }
+        .header__mobile__contact__item__icon {
+          width: 16px; }
+          .header__mobile__contact__item__icon svg {
+            width: 100%; }
       .header__mobile__contact p {
         padding-top: 5px;
         color: #FFFFFF;
