--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -180,8 +180,8 @@
 				
 				h1{
 					width: 100%;
-					font-size: 16px;
-					color: $white;
+					font-size: 19px;
+					color: $mikado_yellow;
 					letter-spacing: normal;
 					line-height: normal;
 					font-weight: normal;
