--- a/scss/components/home/_experts.scss
+++ b/scss/components/home/_experts.scss
@@ -3,6 +3,7 @@
 	overflow: hidden;
 	position: relative;
 	height: 500px;
+    margin-top: 220px;
 
     @media(min-width: 1199px){
         height: 600px;
